diesel_compile_tests/tests/fail/array_expressions_must_be_same_type.stderr
error[E0277]: the trait bound `f64: SelectableExpression<()>` is not satisfied
   --> $DIR/array_expressions_must_be_same_type.rs:11:5
    |
11  |     select(array((1, 3f64))).get_result::<Vec<i32>>(&mut connection).unwrap();
    |     ^^^^^^ the trait `SelectableExpression<()>` is not implemented for `f64`
    |
   ::: $DIESEL/src/query_builder/functions.rs
    |
    |     SelectStatement<()>: SelectDsl<T>,
    |                          ------------ required by this bound in `diesel::select`
    |
    = note: required because of the requirements on the impl of `SelectableExpression<()>` for `(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64)`
    = note: 1 redundant requirements hidden
    = note: required because of the requirements on the impl of `SelectableExpression<()>` for `diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>`
    = note: required because of the requirements on the impl of `SelectDsl<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>` for `SelectStatement<()>`

error[E0277]: the trait bound `f64: ValidGrouping<()>` is not satisfied
   --> $DIR/array_expressions_must_be_same_type.rs:11:5
    |
11  |     select(array((1, 3f64))).get_result::<Vec<i32>>(&mut connection).unwrap();
    |     ^^^^^^ the trait `ValidGrouping<()>` is not implemented for `f64`
    |
   ::: $DIESEL/src/query_builder/functions.rs
    |
    |     SelectStatement<()>: SelectDsl<T>,
    |                          ------------ required by this bound in `diesel::select`
    |
    = note: required because of the requirements on the impl of `ValidGrouping<()>` for `(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64)`
    = note: 1 redundant requirements hidden
    = note: required because of the requirements on the impl of `ValidGrouping<()>` for `diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>`
    = note: required because of the requirements on the impl of `SelectDsl<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>` for `SelectStatement<()>`

error[E0277]: the trait bound `f64: SelectableExpression<()>` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:11:30
   |
11 |     select(array((1, 3f64))).get_result::<Vec<i32>>(&mut connection).unwrap();
   |                              ^^^^^^^^^^ the trait `SelectableExpression<()>` is not implemented for `f64`
   |
   = note: required because of the requirements on the impl of `SelectableExpression<()>` for `(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64)`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `SelectableExpression<()>` for `diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>`
   = note: required because of the requirements on the impl of `SelectClauseExpression<()>` for `diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>`
   = note: required because of the requirements on the impl of `Query` for `SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>>`
   = note: required because of the requirements on the impl of `LoadQuery<_, Vec<i32>>` for `SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>>`

error[E0277]: the trait bound `f64: ValidGrouping<()>` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:11:30
   |
11 |     select(array((1, 3f64))).get_result::<Vec<i32>>(&mut connection).unwrap();
   |                              ^^^^^^^^^^ the trait `ValidGrouping<()>` is not implemented for `f64`
   |
   = note: required because of the requirements on the impl of `ValidGrouping<()>` for `(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64)`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `ValidGrouping<()>` for `diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>`
   = note: required because of the requirements on the impl of `Query` for `SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>>`
   = note: required because of the requirements on the impl of `LoadQuery<_, Vec<i32>>` for `SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>>`

error[E0277]: the trait bound `f64: QueryId` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:11:30
   |
11 |     select(array((1, 3f64))).get_result::<Vec<i32>>(&mut connection).unwrap();
   |                              ^^^^^^^^^^ the trait `QueryId` is not implemented for `f64`
   |
   = note: required because of the requirements on the impl of `QueryId` for `(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64)`
   = note: 3 redundant requirements hidden
   = note: required because of the requirements on the impl of `QueryId` for `SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>>`
   = note: required because of the requirements on the impl of `LoadQuery<_, Vec<i32>>` for `SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>>`

error[E0277]: the trait bound `f64: QueryFragment<_>` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:11:30
   |
11 |     select(array((1, 3f64))).get_result::<Vec<i32>>(&mut connection).unwrap();
   |                              ^^^^^^^^^^ the trait `QueryFragment<_>` is not implemented for `f64`
   |
   = note: required because of the requirements on the impl of `QueryFragment<_>` for `(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64)`
   = note: 2 redundant requirements hidden
   = note: required because of the requirements on the impl of `QueryFragment<_>` for `diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>`
   = note: required because of the requirements on the impl of `SelectClauseQueryFragment<(), _>` for `diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `QueryFragment<_>` for `SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>>`
   = note: required because of the requirements on the impl of `LoadQuery<_, Vec<i32>>` for `SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>>`

error[E0277]: the trait bound `f64: diesel::Expression` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:11:12
   |
11 |     select(array((1, 3f64))).get_result::<Vec<i32>>(&mut connection).unwrap();
   |            ^^^^^ the trait `diesel::Expression` is not implemented for `f64`
   |
  ::: $DIESEL/src/pg/expression/array.rs
   |
   |     T: AsExpressionList<ST>,
   |        -------------------- required by this bound in `diesel::dsl::array`
   |
   = note: required because of the requirements on the impl of `AsExpression<diesel::sql_types::Integer>` for `f64`
   = note: required because of the requirements on the impl of `AsExpressionList<diesel::sql_types::Integer>` for `(i32, f64)`

error[E0277]: the trait bound `{integer}: SelectableExpression<()>` is not satisfied
   --> $DIR/array_expressions_must_be_same_type.rs:12:5
    |
12  |     select(array((1, 3f64))).get_result::<Vec<f64>>(&mut connection).unwrap();
    |     ^^^^^^ the trait `SelectableExpression<()>` is not implemented for `{integer}`
    |
   ::: $DIESEL/src/query_builder/functions.rs
    |
    |     SelectStatement<()>: SelectDsl<T>,
    |                          ------------ required by this bound in `diesel::select`
    |
    = help: the following implementations were found:
              <&'a T as SelectableExpression<QS>>
              <(A, B) as SelectableExpression<QS>>
              <(A, B, C) as SelectableExpression<QS>>
              <(A, B, C, D) as SelectableExpression<QS>>
            and 129 others
    = note: required because of the requirements on the impl of `SelectableExpression<()>` for `({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)`
    = note: 1 redundant requirements hidden
    = note: required because of the requirements on the impl of `SelectableExpression<()>` for `diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>`
    = note: required because of the requirements on the impl of `SelectDsl<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>` for `SelectStatement<()>`

error[E0277]: the trait bound `{integer}: ValidGrouping<()>` is not satisfied
   --> $DIR/array_expressions_must_be_same_type.rs:12:5
    |
12  |     select(array((1, 3f64))).get_result::<Vec<f64>>(&mut connection).unwrap();
    |     ^^^^^^ the trait `ValidGrouping<()>` is not implemented for `{integer}`
    |
   ::: $DIESEL/src/query_builder/functions.rs
    |
    |     SelectStatement<()>: SelectDsl<T>,
    |                          ------------ required by this bound in `diesel::select`
    |
    = help: the following implementations were found:
              <&'a T as ValidGrouping<GB>>
              <(A, B) as ValidGrouping<__GroupByClause>>
              <(A, B, C) as ValidGrouping<__GroupByClause>>
              <(A, B, C, D) as ValidGrouping<__GroupByClause>>
            and 124 others
    = note: required because of the requirements on the impl of `ValidGrouping<()>` for `({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)`
    = note: 1 redundant requirements hidden
    = note: required because of the requirements on the impl of `ValidGrouping<()>` for `diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>`
    = note: required because of the requirements on the impl of `SelectDsl<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>` for `SelectStatement<()>`

error[E0277]: the trait bound `{integer}: SelectableExpression<()>` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:12:30
   |
12 |     select(array((1, 3f64))).get_result::<Vec<f64>>(&mut connection).unwrap();
   |                              ^^^^^^^^^^ the trait `SelectableExpression<()>` is not implemented for `{integer}`
   |
   = help: the following implementations were found:
             <&'a T as SelectableExpression<QS>>
             <(A, B) as SelectableExpression<QS>>
             <(A, B, C) as SelectableExpression<QS>>
             <(A, B, C, D) as SelectableExpression<QS>>
           and 129 others
   = note: required because of the requirements on the impl of `SelectableExpression<()>` for `({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `SelectableExpression<()>` for `diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>`
   = note: required because of the requirements on the impl of `SelectClauseExpression<()>` for `diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>`
   = note: required because of the requirements on the impl of `Query` for `SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>>`
   = note: required because of the requirements on the impl of `LoadQuery<_, Vec<f64>>` for `SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>>`

error[E0277]: the trait bound `{integer}: ValidGrouping<()>` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:12:30
   |
12 |     select(array((1, 3f64))).get_result::<Vec<f64>>(&mut connection).unwrap();
   |                              ^^^^^^^^^^ the trait `ValidGrouping<()>` is not implemented for `{integer}`
   |
   = help: the following implementations were found:
             <&'a T as ValidGrouping<GB>>
             <(A, B) as ValidGrouping<__GroupByClause>>
             <(A, B, C) as ValidGrouping<__GroupByClause>>
             <(A, B, C, D) as ValidGrouping<__GroupByClause>>
           and 124 others
   = note: required because of the requirements on the impl of `ValidGrouping<()>` for `({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `ValidGrouping<()>` for `diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>`
   = note: required because of the requirements on the impl of `Query` for `SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>>`
   = note: required because of the requirements on the impl of `LoadQuery<_, Vec<f64>>` for `SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>>`

error[E0277]: the trait bound `{integer}: QueryId` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:12:30
   |
12 |     select(array((1, 3f64))).get_result::<Vec<f64>>(&mut connection).unwrap();
   |                              ^^^^^^^^^^ the trait `QueryId` is not implemented for `{integer}`
   |
   = help: the following implementations were found:
             <&'a T as QueryId>
             <() as QueryId>
             <(A, B) as QueryId>
             <(A, B, C) as QueryId>
           and 192 others
   = note: required because of the requirements on the impl of `QueryId` for `({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)`
   = note: 3 redundant requirements hidden
   = note: required because of the requirements on the impl of `QueryId` for `SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>>`
   = note: required because of the requirements on the impl of `LoadQuery<_, Vec<f64>>` for `SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>>`

error[E0277]: the trait bound `{integer}: QueryFragment<_>` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:12:30
   |
12 |     select(array((1, 3f64))).get_result::<Vec<f64>>(&mut connection).unwrap();
   |                              ^^^^^^^^^^ the trait `QueryFragment<_>` is not implemented for `{integer}`
   |
   = help: the following implementations were found:
             <&'a T as QueryFragment<DB>>
             <() as QueryFragment<DB>>
             <(A, B) as QueryFragment<__DB>>
             <(A, B, C) as QueryFragment<__DB>>
           and 222 others
   = note: required because of the requirements on the impl of `QueryFragment<_>` for `({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)`
   = note: 2 redundant requirements hidden
   = note: required because of the requirements on the impl of `QueryFragment<_>` for `diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>`
   = note: required because of the requirements on the impl of `SelectClauseQueryFragment<(), _>` for `diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `QueryFragment<_>` for `SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>>`
   = note: required because of the requirements on the impl of `LoadQuery<_, Vec<f64>>` for `SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>>`

error[E0277]: the trait bound `{integer}: diesel::Expression` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:12:12
   |
12 |     select(array((1, 3f64))).get_result::<Vec<f64>>(&mut connection).unwrap();
   |            ^^^^^ the trait `diesel::Expression` is not implemented for `{integer}`
   |
  ::: $DIESEL/src/pg/expression/array.rs
   |
   |     T: AsExpressionList<ST>,
   |        -------------------- required by this bound in `diesel::dsl::array`
   |
   = help: the following implementations were found:
             <&'a T as diesel::Expression>
             <(A, B) as diesel::Expression>
             <(A, B, C) as diesel::Expression>
             <(A, B, C, D) as diesel::Expression>
           and 105 others
   = note: required because of the requirements on the impl of `AsExpression<diesel::sql_types::Double>` for `{integer}`
   = note: required because of the requirements on the impl of `AsExpressionList<diesel::sql_types::Double>` for `({integer}, f64)`

error[E0277]: the trait bound `SelectStatement<()>: SelectDsl<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:11:5
   |
11 |     select(array((1, 3f64))).get_result::<Vec<i32>>(&mut connection).unwrap();
   |     ^^^^^^ the trait `SelectDsl<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>` is not implemented for `SelectStatement<()>`
   |
   = help: the following implementations were found:
             <SelectStatement<F, S, D, W, O, LOf, G, H, LC> as SelectDsl<Selection>>

error[E0277]: the trait bound `SelectStatement<()>: SelectDsl<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:12:5
   |
12 |     select(array((1, 3f64))).get_result::<Vec<f64>>(&mut connection).unwrap();
   |     ^^^^^^ the trait `SelectDsl<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>` is not implemented for `SelectStatement<()>`
   |
   = help: the following implementations were found:
             <SelectStatement<F, S, D, W, O, LOf, G, H, LC> as SelectDsl<Selection>>
